# or-start-list

./: .dockerignore  .gitignore  APP_DESCRIPTION.md  CLAUDE.md  README.md  docker-compose.yml  or-start-list.code-workspace  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: desktop-tauri-build.yml  portal-ghcr.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  i18n.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/sql/: delete_classes.sql  delete_competitors.sql  delete_courses.sql  delete_pricing_rules.sql  delete_quick_filters.sql  get_device_config.sql  get_pending_outbox.sql  get_recent_registrations.sql  get_sync_state.sql  insert_class.sql  insert_competitor.sql  insert_course.sql  insert_outbox_registration_created.sql  insert_pricing_rule.sql  insert_quick_filter.sql  insert_registration.sql  list_competitors_by_letter.sql  list_courses.sql  mark_outbox_synced.sql  next_registration_seq.sql  schema.sql  search_competitors.sql  set_device_config.sql  update_sync_state.sql
apps/desktop/src-tauri/src/: commands.rs  database.rs  db_sql.rs  lib.rs  main.rs  models.rs  si_reader.rs  sync.rs
apps/portal/: .env.example  Dockerfile  auth.ts  drizzle.config.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/components/: app-provider.tsx  (+2 more)
docs/: IMPLEMENTATION_NOTES.md  eolxml.dtd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/routes/: +page.svelte
(+109 files in other folders)
