[package]
name = "or_start_list_desktop"
version = "0.1.0"
description = "Offline-first desktop app for registration"
authors = ["OR Start List Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.10.2", features = [] }
diesel = { version = "=2.1.6", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
uuid = "=1.10.0"
time = "=0.3.36"

[features]
default = []
