[package]
name = "or_start_list_desktop"
version = "0.1.0"
description = "Offline-first desktop app for registration"
authors = ["OR Start List Team"]
license = "MIT"
edition = "2021"

[lib]
name = "or_start_list_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.10.2", features = [] }
diesel = { version = "=2.1.6", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "=1.10.0", features = ["v4"] }
time = "=0.3.36"
log = "0.4"
simplelog = "0.12"
serialport = "4"
tauri-plugin-updater = "2"

[features]
default = []
